# Substrate_Homework_reference

assignment-2-KillerJi/pallets/kitties/: Cargo.toml
assignment-2-KillerJi/pallets/kitties/src/: lib.rs
assignment-2-KillerJi/runtime/: Cargo.toml
assignment-2-KillerJi/runtime/src/: lib.rs
assignment-2-KillerJi/submission/: Design document.txt
assignment-3-KillerJi/pallets/kitties/src/: lib.rs
assignment-3-KillerJi/submission/: Design document - 3.txt
