[package]
name = "pallet-kitties"
version = "0.1.0"
authors = ["jiji"]
edition = "2018"

[dependencies]
codec = {package = "parity-scale-codec", version = "1.3.4",default-features = false}
frame-support ={version = "2.0.0",default-features = false}
frame-system = {version = "2.0.0",default-features = false}
sp-io = { default-features = false, version = '2.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }
[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "pallet-randomness-collective-flip/std",
]